# peacock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-dev.sh  build-host.sh  build.sh  clean.sh  prog.sh
common/peacock_msg/: CMakeLists.txt  peacock_msg.c  peacock_msg.h
device/: CMakeLists.txt  peacock_dev.c  peacock_dev_err.c  peacock_dev_gpio.c  peacock_dev_gpio.h  peacock_dev_msg.c  peacock_dev_msg.h  peacock_dev_pins.c  peacock_dev_pwm.c  peacock_dev_pwm.h  peacock_lb.c
host/: CMakeLists.txt  peacock_host.c  peacock_host.h  peacock_host_err.c  peacock_host_err.h  peacock_host_gpio.c  peacock_host_gpio.h  peacock_host_msg.c  peacock_host_msg.h  peacock_host_pins.c  peacock_host_pwm.c  peacock_host_pwm.h  peacock_host_util.c  peacock_lb.c  serial.c  serial.h  test.c
libpeacock/: CMakeLists.txt  peacock.c  peacock.h  peacock_err.c  peacock_err.h  peacock_gpio.c  peacock_msg.c  peacock_pins.c  peacock_pwm.c  peacock_pwm.h  peacock_serial.h  peacock_util.c
msg/: msg.c  msg.h
peacock/: CMakeLists.txt  peacock.c  peacock.h  peacock_err.c  peacock_gpio.c  peacock_lock.c  peacock_lock.h  peacock_msg.c  peacock_msg.h  peacock_pins.c  peacock_pins.h  peacock_pwm.c  peacock_serial.c  peacock_util.c  peacock_util.h
peacock_device/: CMakeLists.txt  peacock_dev.c  peacock_dev_err.c  peacock_dev_err.h  peacock_dev_gpio.c  peacock_dev_gpio.h  peacock_dev_msg.c  peacock_dev_pins.c  peacock_dev_pins.h  peacock_dev_pwm.c  peacock_dev_pwm.h
tests/: CMakeLists.txt  test.c  test.cpp
